--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,23 +4,18 @@ jobs:
   build:
     working_directory: ~/repo
     docker:
-      - image: circleci/golang:1.15.8
+      - image: circleci/golang:1.14.6
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - go-mod-v4-{{ checksum "go.sum" }}
       - run:
-          name: Install Dependencies
-          command: go mod download
-      - save_cache:
-          key: go-mod-v4-{{ checksum "go.sum" }}
-          paths:
-            - "/go/pkg/mod"
-      - run:
-          name: Run tests
-          command: |
-            mkdir -p /tmp/test-reports
-            gotestsum --junitfile /tmp/test-reports/unit-tests.xml
-      - store_test_results:
-          path: /tmp/test-reports
+          name: Run tests and coverage
+          command: go test -race -coverprofile=coverage.txt -covermode=atomic
+            - run:
+                name: Upload coverage to Codecov
+                command: bash <(curl -s https://codecov.io/bash)
+
+workflow:
+  version: 2.1
+  build-test:
+    jobs:
+      - build
